--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -5,9 +5,16 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "empty": "0.10.1"
+    "empty": "0.10.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@angular-devkit/core": "~20.0.0",
+    "@nx/angular": "^21.2.1",
+    "@nx/react": "^21.2.1",
+    "@nx/vue": "^21.2.1",
     "@nx/workspace": "21.2.1",
     "nx": "21.2.1"
   }
