--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -13,9 +13,17 @@
   "devDependencies": {
     "@angular-devkit/core": "~20.0.0",
     "@nx/angular": "^21.2.1",
+    "@nx/js": "21.2.1",
     "@nx/react": "^21.2.1",
     "@nx/vue": "^21.2.1",
     "@nx/workspace": "21.2.1",
-    "nx": "21.2.1"
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/node": "18.16.9",
+    "nx": "21.2.1",
+    "prettier": "^2.6.2",
+    "tslib": "^2.3.0",
+    "typescript": "~5.8.2"
   }
 }
