--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -16,14 +16,19 @@
     "@nx/js": "21.2.1",
     "@nx/react": "^21.2.1",
     "@nx/vue": "^21.2.1",
+    "@nx/web": "21.2.1",
+    "@nx/webpack": "21.2.1",
     "@nx/workspace": "21.2.1",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "18.16.9",
     "nx": "21.2.1",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "webpack-cli": "^5.1.4"
   }
 }
